Fix some spacing and target="_blank"ing.

--- a/mftb5/static/less/playlist.less
+++ b/mftb5/static/less/playlist.less
@@ -84,7 +84,7 @@
     width: 1.5em;
     display: inline-block;
     text-align: center;
-    padding: .5em .5em;
+    padding: .5em .5em .6em;
     border-radius: 0 0 .3em .3em;
     
     &.pp {
